--- a/semana-js-expert/semana-2/public/pages/room/index.html
+++ b/semana-js-expert/semana-2/public/pages/room/index.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="./deps/style.css" />
 
     <script src="./deps/font-awesome/font-awesome.js"></script>
-    <script defer src="./deps/peerjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js" integrity="sha512-wNUAk/IKoDcVSiKiN/0ormRTzENc9IbFdHa/BWNuLPtp2kG53TLf5dobOeCHoeafnlaSfjKAiSewS6AJspm/Iw==" crossorigin="anonymous"></script>
     <script src="./deps/socket.io.min.js" defer></script>
 
-    
-    <script src="app.js" defer></script>
+    <script src="src/util/util.js" defer></script>
+    <script src="src/util/media.js" defer></script>
+    <script src="src/util/socket.js" defer></script>
+    <script src="src/view.js" defer></script>
+    <script src="src/business.js" defer></script>
+    <script src="src/app.js" defer></script>
 
   </head>
   <body>
